--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,15 +2,15 @@
 <html lang="en-us">
 
 	<head>
-		<title>Eat-da-Burger!</title>
+		<title>Burger Town</title>
 		<link rel="shortcut icon" type="image/x-icon" href="./assets/img/burger.png"/>
 
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<!-- FONTS -->
-		<link href="https://fonts.googleapis.com/css?family=Anton&display=swap" rel="stylesheet">
-		<!-- CSS -->
+		<link href="https://fonts.googleapis.com/css2?family=Teko&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Francois+One&display=swap" rel="stylesheet">		<!-- CSS -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 
